Add Curator and Contact sections to index.html
added details about me/author

--- a/index.html
+++ b/index.html
@@ -980,6 +980,8 @@
     <li><a href="#culinary">Culinary Culture</a></li>
     <li><a href="#divergence">WB vs BD</a></li>
     <li><a href="#pathway">Start Here</a></li>
+    <li><a href="#curator">Curator</a></li>
+    <li><a href="#contact">Contact</a></li>
   </ul>
 </nav>
 
@@ -2245,6 +2247,126 @@
       <cite>— Curator's Note</cite>
     </div>
 
+  </div>
+</section>
+
+<!-- ========== CURATOR SECTION ========== -->
+<section class="section" id="curator" style="background: var(--white);">
+  <div class="container">
+    <p class="part-label">About This Repository</p>
+    <h2 class="section-title">Curated <em>By</em></h2>
+
+    <div style="display:flex;gap:3rem;align-items:flex-start;flex-wrap:wrap;margin-top:2.5rem;">
+
+      <!-- Photo + Identity -->
+      <div style="display:flex;flex-direction:column;align-items:center;gap:1rem;min-width:180px;">
+        <div style="width:150px;height:150px;border-radius:50%;overflow:hidden;border:3px solid var(--border);box-shadow:0 8px 32px rgba(28,61,90,0.12);flex-shrink:0;">
+          <img
+            src="https://raw.githubusercontent.com/SouvikDcoder/self-assets/main/souvik-dey-profile-photo-01.png"
+            alt="Souvik D."
+            style="width:100%;height:100%;object-fit:cover;"
+            onerror="this.style.display='none';this.parentElement.style.background='var(--parchment)';this.parentElement.innerHTML='<span style=\'font-family:Playfair Display,serif;font-size:2.5rem;color:var(--river);display:flex;align-items:center;justify-content:center;height:100%;\'>S</span>'"
+          />
+        </div>
+        <div style="text-align:center;">
+          <p style="font-family:'Playfair Display',serif;font-size:1.3rem;font-weight:700;color:var(--ink);line-height:1.2;">Souvik D.</p>
+          <p style="font-family:'DM Mono',monospace;font-size:0.65rem;letter-spacing:0.12em;text-transform:uppercase;color:var(--turmeric);margin-top:0.3rem;">Curator</p>
+        </div>
+      </div>
+
+      <!-- Bio -->
+      <div style="flex:1;min-width:280px;">
+        <p style="font-family:'Crimson Pro',serif;font-size:1.15rem;line-height:1.9;color:var(--text);margin-bottom:1.2rem;">
+          Souvik is a technologist and voracious reader with deep Bengali roots. Drawn equally to literature, ecology, and the civilisational history of his heritage, he assembled this repository as a personal map through Bengal's rivers, kitchens and libraries — and left the door open for anyone who wants to explore alongside him.
+        </p>
+        <p style="font-family:'Crimson Pro',serif;font-size:1.15rem;line-height:1.9;color:var(--text);margin-bottom:1.2rem;">
+          He lives in Pune, reads obsessively in English and Bengali, and believes the best conversations always begin over fish curry and rice. This page is a living document — he expects it to keep growing as he reads more, watches more, and learns more.
+        </p>
+        <p style="font-family:'Crimson Pro',serif;font-style:italic;font-size:1.05rem;line-height:1.75;color:var(--text-muted);">
+          "I built this because I kept forgetting which book I'd been meaning to read, which documentary I'd half-watched, which paper I'd bookmarked and never returned to. This page is my memory. It might be useful to yours as well."
+        </p>
+
+        <!-- Writing note -->
+        <div style="margin-top:1.5rem;padding:1rem 1.2rem;background:rgba(28,61,90,0.04);border-left:3px solid var(--river);border-radius:0 4px 4px 0;">
+          <p style="font-family:'DM Mono',monospace;font-size:0.65rem;letter-spacing:0.12em;text-transform:uppercase;color:var(--river);margin-bottom:0.4rem;">Also writes at</p>
+          <a href="https://substack.com/@mutedwonderings" target="_blank" style="font-family:'Playfair Display',serif;font-size:1.05rem;font-style:italic;color:var(--turmeric);text-decoration:none;border-bottom:1px solid currentColor;">
+            Muted Wonderings on Substack ↗
+          </a>
+          <p style="font-family:'Crimson Pro',serif;font-size:0.88rem;color:var(--text-muted);margin-top:0.3rem;">Essays, reflections and slow curiosities.</p>
+        </div>
+      </div>
+
+    </div>
+  </div>
+</section>
+
+<!-- ========== CONTACT SECTION ========== -->
+<section style="background:linear-gradient(170deg,#0d2b3e 0%,#1c3d5a 55%,#0f3020 100%);padding:5rem 2rem;position:relative;overflow:hidden;" id="contact">
+  <!-- Decorative ripple -->
+  <div style="position:absolute;width:600px;height:600px;border-radius:50%;border:1px solid rgba(200,146,42,0.08);bottom:-200px;right:-100px;pointer-events:none;"></div>
+  <div style="position:absolute;width:400px;height:400px;border-radius:50%;border:1px solid rgba(200,146,42,0.06);bottom:-150px;right:-50px;pointer-events:none;"></div>
+
+  <div style="max-width:1280px;margin:0 auto;position:relative;z-index:2;">
+    <p style="font-family:'DM Mono',monospace;font-size:0.68rem;letter-spacing:0.4em;text-transform:uppercase;color:rgba(200,146,42,0.6);margin-bottom:0.75rem;display:flex;align-items:center;gap:1rem;">
+      Get In Touch
+      <span style="flex:1;height:1px;background:rgba(200,146,42,0.2);max-width:80px;display:inline-block;"></span>
+    </p>
+    <h2 style="font-family:'Playfair Display',serif;font-size:clamp(1.8rem,4vw,3rem);font-weight:800;color:white;line-height:1.15;margin-bottom:0.75rem;">
+      Found something to add? <em style="font-style:italic;color:var(--gold-light);">Say hello.</em>
+    </h2>
+    <p style="font-family:'Crimson Pro',serif;font-size:1.1rem;color:rgba(245,240,232,0.6);max-width:620px;line-height:1.8;margin-bottom:3rem;">
+      This is a living document. If you have a book recommendation, a documentary I've missed, a correction, a question, or simply want to talk about Bengal's rivers and food — every kind of conversation is welcome. Reach out through any of the channels below.
+    </p>
+
+    <!-- Contact Grid -->
+    <div style="display:grid;grid-template-columns:repeat(auto-fill,minmax(220px,1fr));gap:1rem;max-width:900px;">
+
+      <!-- Substack -->
+      <a href="https://substack.com/@mutedwonderings" target="_blank" style="text-decoration:none;background:rgba(255,255,255,0.05);border:1px solid rgba(200,146,42,0.2);border-radius:6px;padding:1.3rem 1.4rem;display:flex;flex-direction:column;gap:0.5rem;transition:all 0.22s;cursor:pointer;" onmouseover="this.style.background='rgba(255,255,255,0.1)';this.style.borderColor='rgba(200,146,42,0.45)'" onmouseout="this.style.background='rgba(255,255,255,0.05)';this.style.borderColor='rgba(200,146,42,0.2)'">
+        <span style="font-size:1.4rem;">✍️</span>
+        <span style="font-family:'DM Mono',monospace;font-size:0.62rem;letter-spacing:0.1em;text-transform:uppercase;color:rgba(200,146,42,0.7);">Substack</span>
+        <span style="font-family:'Crimson Pro',serif;font-size:0.95rem;color:rgba(245,240,232,0.85);">Muted Wonderings</span>
+        <span style="font-family:'DM Mono',monospace;font-size:0.6rem;color:rgba(245,240,232,0.35);margin-top:auto;">substack.com/@mutedwonderings</span>
+      </a>
+
+      <!-- LinkedIn -->
+      <a href="https://www.linkedin.com/in/souvik-d-ey/" target="_blank" style="text-decoration:none;background:rgba(255,255,255,0.05);border:1px solid rgba(200,146,42,0.2);border-radius:6px;padding:1.3rem 1.4rem;display:flex;flex-direction:column;gap:0.5rem;transition:all 0.22s;cursor:pointer;" onmouseover="this.style.background='rgba(255,255,255,0.1)';this.style.borderColor='rgba(200,146,42,0.45)'" onmouseout="this.style.background='rgba(255,255,255,0.05)';this.style.borderColor='rgba(200,146,42,0.2)'">
+        <span style="font-size:1.4rem;">💼</span>
+        <span style="font-family:'DM Mono',monospace;font-size:0.62rem;letter-spacing:0.1em;text-transform:uppercase;color:rgba(200,146,42,0.7);">LinkedIn</span>
+        <span style="font-family:'Crimson Pro',serif;font-size:0.95rem;color:rgba(245,240,232,0.85);">Souvik D.</span>
+        <span style="font-family:'DM Mono',monospace;font-size:0.6rem;color:rgba(245,240,232,0.35);margin-top:auto;">linkedin.com/in/souvik-d-ey</span>
+      </a>
+
+      <!-- GitHub -->
+      <a href="https://github.com/SouvikDcoder" target="_blank" style="text-decoration:none;background:rgba(255,255,255,0.05);border:1px solid rgba(200,146,42,0.2);border-radius:6px;padding:1.3rem 1.4rem;display:flex;flex-direction:column;gap:0.5rem;transition:all 0.22s;cursor:pointer;" onmouseover="this.style.background='rgba(255,255,255,0.1)';this.style.borderColor='rgba(200,146,42,0.45)'" onmouseout="this.style.background='rgba(255,255,255,0.05)';this.style.borderColor='rgba(200,146,42,0.2)'">
+        <span style="font-size:1.4rem;">⌨️</span>
+        <span style="font-family:'DM Mono',monospace;font-size:0.62rem;letter-spacing:0.1em;text-transform:uppercase;color:rgba(200,146,42,0.7);">GitHub</span>
+        <span style="font-family:'Crimson Pro',serif;font-size:0.95rem;color:rgba(245,240,232,0.85);">SouvikDcoder</span>
+        <span style="font-family:'DM Mono',monospace;font-size:0.6rem;color:rgba(245,240,232,0.35);margin-top:auto;">github.com/SouvikDcoder</span>
+      </a>
+
+      <!-- Instagram -->
+      <a href="https://www.instagram.com/kuroi_akuma_13/" target="_blank" style="text-decoration:none;background:rgba(255,255,255,0.05);border:1px solid rgba(200,146,42,0.2);border-radius:6px;padding:1.3rem 1.4rem;display:flex;flex-direction:column;gap:0.5rem;transition:all 0.22s;cursor:pointer;" onmouseover="this.style.background='rgba(255,255,255,0.1)';this.style.borderColor='rgba(200,146,42,0.45)'" onmouseout="this.style.background='rgba(255,255,255,0.05)';this.style.borderColor='rgba(200,146,42,0.2)'">
+        <span style="font-size:1.4rem;">📷</span>
+        <span style="font-family:'DM Mono',monospace;font-size:0.62rem;letter-spacing:0.1em;text-transform:uppercase;color:rgba(200,146,42,0.7);">Instagram</span>
+        <span style="font-family:'Crimson Pro',serif;font-size:0.95rem;color:rgba(245,240,232,0.85);">@kuroi_akuma_13</span>
+        <span style="font-family:'DM Mono',monospace;font-size:0.6rem;color:rgba(245,240,232,0.35);margin-top:auto;">instagram.com/kuroi_akuma_13</span>
+      </a>
+
+      <!-- Telegram -->
+      <a href="https://t.me/Kuroi_akuma" target="_blank" style="text-decoration:none;background:rgba(255,255,255,0.05);border:1px solid rgba(200,146,42,0.2);border-radius:6px;padding:1.3rem 1.4rem;display:flex;flex-direction:column;gap:0.5rem;transition:all 0.22s;cursor:pointer;" onmouseover="this.style.background='rgba(255,255,255,0.1)';this.style.borderColor='rgba(200,146,42,0.45)'" onmouseout="this.style.background='rgba(255,255,255,0.05)';this.style.borderColor='rgba(200,146,42,0.2)'">
+        <span style="font-size:1.4rem;">✈️</span>
+        <span style="font-family:'DM Mono',monospace;font-size:0.62rem;letter-spacing:0.1em;text-transform:uppercase;color:rgba(200,146,42,0.7);">Telegram</span>
+        <span style="font-family:'Crimson Pro',serif;font-size:0.95rem;color:rgba(245,240,232,0.85);">@Kuroi_akuma</span>
+        <span style="font-family:'DM Mono',monospace;font-size:0.6rem;color:rgba(245,240,232,0.35);margin-top:auto;">t.me/Kuroi_akuma</span>
+      </a>
+
+    </div>
+
+    <!-- Open invitation note -->
+    <p style="font-family:'Crimson Pro',serif;font-style:italic;font-size:1rem;color:rgba(245,240,232,0.35);margin-top:2.5rem;max-width:560px;line-height:1.75;">
+      Whether you're a fellow reader, a researcher, a student, a fisherman's grandchild, or simply someone who loves Bengal — this page is for you, and your additions will always be considered.
+    </p>
   </div>
 </section>
 
